--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
   - nuget install xunit.runners -Version 1.9.2 -OutputDirectory testrunner
 script:
   - xbuild /p:Configuration=Release UploadcareCSharp.sln
-  - mono ./testrunner/xunit.runners.1.9.2/tools/xunit.console.clr4.exe ./UploadcareCSharp.Tests/bin/Release/UploadcareCSharp.Tests.dll
+  - mono --runtime=v4.0 ./testrunner/xunit.runners.1.9.2/tools/xunit.console.exe ./UploadcareCSharp.Tests/bin/Release/UploadcareCSharp.Tests.dll
