--- a/UploadcareCSharp/UploadcareCSharp.csproj
+++ b/UploadcareCSharp/UploadcareCSharp.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{31AE0941-2C5B-466B-8380-0A7A92C40C28}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>uploadcare_csharp</RootNamespace>
+    <RootNamespace>UploadcareCSharp</RootNamespace>
     <AssemblyName>UploadcareCSharp</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
