--- a/UploadcareCSharp/UploadcareCSharp.csproj
+++ b/UploadcareCSharp/UploadcareCSharp.csproj
@@ -42,6 +42,13 @@
     <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\FileQueryBuilder.cs" />
+    <Compile Include="API\FilesEnumator.cs" />
+    <Compile Include="API\IPaginatedQueryBuilder.cs" />
+    <Compile Include="Data\FileDataWrapper.cs" />
+    <Compile Include="Data\FilePageData.cs" />
+    <Compile Include="Data\IDataWrapper.cs" />
+    <Compile Include="Data\IPageData.cs" />
     <Compile Include="Enums\EStoreType.cs" />
     <Compile Include="Url\CdnPathBuilder.cs" />
     <Compile Include="API\Client.cs" />
@@ -59,6 +66,9 @@
     <Compile Include="Exceptions\UploadcareNetworkException.cs" />
     <Compile Include="Upload\IUploader.cs" />
     <Compile Include="Exceptions\UploadFailureException.cs" />
+    <Compile Include="Url\UrlParameters\FilesRemovedParameter.cs" />
+    <Compile Include="Url\UrlParameters\FilesStoredParameter.cs" />
+    <Compile Include="Url\UrlParameters\IUrlParameter.cs" />
     <Compile Include="Url\Urls.cs" />
   </ItemGroup>
   <ItemGroup>
