--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ install:
 - dotnet restore
 script:
 - dotnet build
-- dotnet test UploadcareCSharp.Tests/UploadcareCSharp.Tests.csproj
+- dotnet test Uploadcare.Tests/Uploadcare.Tests.csproj
