--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,6 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'test'
-    projects: 'Uploadcare.Tests/Uploadcare.Tests.csproj'
+
+- script: dotnet test Uploadcare.Tests/Uploadcare.Tests.csproj
+  displayName: 'dotnet test'
