add xunit runner config

--- a/Uploadcare.Tests/Uploadcare.Tests.csproj
+++ b/Uploadcare.Tests/Uploadcare.Tests.csproj
@@ -23,5 +23,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
