--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,12 @@ steps:
 - script:  dotnet publish -c Release
   displayName: 'dotnet publish'
 
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+
 - task: PublishTestResults@2
   inputs:
     testRunner: VSTest
