Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,4 +70,5 @@ stages:
              command: 'push'
              packagesToPush: '$(Pipeline.Workspace)/package/*.nupkg'
              nuGetFeedType: 'external'
+             allowPackageConflicts: true
              publishFeedCredentials: 'nuget.org (Uploadcare)'
