Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,5 +70,5 @@ stages:
              command: 'push'
              packagesToPush: '$(Pipeline.Workspace)/package/*.nupkg'
              nuGetFeedType: 'external'
-             allowPackageConflicts: true
+             arguments: '-SkipDuplicate'
              publishFeedCredentials: 'nuget.org (Uploadcare)'
