Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,12 +69,7 @@ stages:
             inputs:
               versionSpec: '5.1'
 
-          - task: NuGetAuthenticate@0
-            inputs:
-              nuGetServiceConnections: 'nuget-uploadcare'
-              forceReinstallCredentialProvider: true
-
           - task: NuGetCommand@2
             inputs:
               command: 'custom'
-              arguments: 'push $(Pipeline.Workspace)/package/*.nupkg -NonInteractive -Source https://api.nuget.org/v3/index.json -ApiKey key -SkipDuplicate'
+              arguments: 'push $(Pipeline.Workspace)/package/*.nupkg -NonInteractive -Source https://api.nuget.org/v3/index.json -ApiKey (NuGet) -SkipDuplicate'
