--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,8 @@ stages:
 
 - stage: 'Build'
   variables:
-    buildConfiguration: 'Release'
+    buildConfiguration: 'Release' 
+    group: uploadcare
 
   jobs:
   - job:
@@ -71,12 +72,5 @@ stages:
 
           - task: NuGetCommand@2
             inputs:
-              command: 'push'
-              packagesToPush: '$(Pipeline.Workspace)/package/*.nupkg'
-              nuGetFeedType: 'external'
-              publishFeedCredentials: 'nuget-uploadcare'
-
-          - task: NuGetCommand@2
-            inputs:
               command: 'custom'
-              arguments: 'push $(Pipeline.Workspace)/package/*.nupkg -NonInteractive -Source "nuget-uploadcare" -ApiKey key -SkipDuplicate -NoSymbols'
+              arguments: 'push $(Pipeline.Workspace)/package/*.nupkg -NonInteractive -Source https://api.nuget.org/v3/index.json -ApiKey ${nuget-uploadcare} -SkipDuplicate -NoSymbols'
