--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,9 +55,7 @@ stages:
 - stage: 'PublishReleaseNuGetPackage'
   displayName: 'Publish NuGet Package'
   dependsOn: 'Build'
-  condition: succeeded() 
-  variables:
-    group: uploadcare
+  condition: succeeded()
   
   jobs:
   - deployment:
@@ -76,4 +74,7 @@ stages:
           - task: NuGetCommand@2
             inputs:
               command: 'custom'
-              arguments: 'push $(Pipeline.Workspace)/package/*.nupkg -NonInteractive -Source https://api.nuget.org/v3/index.json -ApiKey $(nuget-uploadcare) -SkipDuplicate -NoSymbols'
+              arguments: 'push $(Pipeline.Workspace)/package/*.nupkg -NonInteractive -Source https://api.nuget.org/v3/index.json -ApiKey $nuget_uploadcare -SkipDuplicate -NoSymbols'
+            env:
+              nuget_uploadcare: $(nuget-uploadcare)
+                
