--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,7 +74,5 @@ stages:
           - task: NuGetCommand@2
             inputs:
               command: 'custom'
-              arguments: 'push $(Pipeline.Workspace)/package/*.nupkg -NonInteractive -Source https://api.nuget.org/v3/index.json -ApiKey $nuget_uploadcare -SkipDuplicate -NoSymbols'
-            env:
-              nuget_uploadcare: $(nuget-uploadcare)
+              arguments: 'push $(Pipeline.Workspace)/package/*.nupkg -NonInteractive -Source https://api.nuget.org/v3/index.json -ApiKey $(nuget-uploadcare) -SkipDuplicate -NoSymbols'
                 
