Correct field type for Orientation field

--- a/Uploadcare.Tests/Uploadcare.Tests.csproj
+++ b/Uploadcare.Tests/Uploadcare.Tests.csproj
@@ -19,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="12.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="detectedfaces.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
