--- a/Uploadcare/Uploadcare.csproj
+++ b/Uploadcare/Uploadcare.csproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MimeTypeMapOfficial" Version="1.0.17" />
     <PackageReference Include="System.Text.Json" Version="4.7.1" />
   </ItemGroup>
 
